--- a/LibraryManager.API/appsettings.json
+++ b/LibraryManager.API/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "LibraryDb": "Server=127.0.0.1,1433;Database=LibraryManager;User Id=SA;Password=SQLR0ck$;Encrypt=False;",
+  "DatabaseAccessMode": "SQL",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
