--- a/LibraryManager.UI/LibraryManager.UI.csproj
+++ b/LibraryManager.UI/LibraryManager.UI.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibraryManager.Application\LibraryManager.Application.csproj" />
+    <Folder Include="API\" />
   </ItemGroup>
 
 </Project>
