--- a/LibraryManager.MVC/LibraryManager.MVC.csproj
+++ b/LibraryManager.MVC/LibraryManager.MVC.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1669a906-d41c-4bda-a1e9-2e051aa55918</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManager.Application\LibraryManager.Application.csproj" />
+  </ItemGroup>
 
 </Project>
